--- a/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-edit.component.html
+++ b/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-edit.component.html
@@ -287,7 +287,7 @@
   <h6 *ngIf="datatargetId === 0" class="mt-3">{{ 'QUESTION.DATATARGET.RELATIONS' | translate }}</h6>
 
   <!-- For existing data-targets, we show list of payload-decoders and button etc. for adding new -->
-  <!-- TODO: Seems we have the exact same thing on HTTP, OpenDataDK, Fireware and MQTT... Why not make it a separate component!? -->
+  <!-- TODO: Seems we have the exact same thing on HTTP, OpenDataDK, Fireware and MQTT... Why not make it a separate, re-usable component!? -->
   <div *ngIf="datatargetId > 0" class="container row" class="mt-3">
     <a (click)="addRow()" class="btn btn-secondary my-2 mb-3 mt-3">
         {{'QUESTION.ADD-RELATIONS' | translate}}
@@ -377,7 +377,7 @@
     <button (click)="routeToDatatargets()" class="btn btn-light" type="button">
       {{ 'GEN.BACK' | translate }}
     </button>
-    <button [disabled]="disableSaveButton()" class="btn btn-primary ml-2" type="submit">
+    <button [disabled]="!datatarget?.openDataDkDataset?.acceptTerms" class="btn btn-primary ml-2" type="submit">
       {{ 'DATATARGET.SAVE' | translate }}
     </button>
   </div>
