IOT-1416: Minor fixes from PR..

--- a/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-edit.component.html
+++ b/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-edit.component.html
@@ -245,7 +245,7 @@
   <!-- Keywords -->
   <div class="row mb-2">
     <div class="form-group mt-3 col-12">
-      <label class="form-label" for="openDataDkDataset.keywordsInput">
+      <label class="form-label" for="openDataDkDataset.keywords">
         {{'OPENDATADK.QUESTION.GIVE-OPENDATADK-KEYWORDS' | translate}}
       </label>
       <mat-select
