IOT-1416: Fixed numbered-list in new info-section of ODDK datatarget edit-UI..

--- a/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-edit.component.html
+++ b/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-edit.component.html
@@ -46,13 +46,13 @@
     </mat-expansion-panel-header>
     <ol>
       <li><p>
-        1. {{ 'OPENDATADK.INTRO.PROCEDURE1' | translate }}
+        {{ 'OPENDATADK.INTRO.PROCEDURE1' | translate }}
         <a href="https://www.opendata.dk/">https://www.opendata.dk/</a>
       </p></li>
-      <li><p>2. {{ 'OPENDATADK.INTRO.PROCEDURE2' | translate }}</p></li>
-      <li><p>3. {{ 'OPENDATADK.INTRO.PROCEDURE3' | translate }}</p></li>
+      <li><p>{{ 'OPENDATADK.INTRO.PROCEDURE2' | translate }}</p></li>
+      <li><p>{{ 'OPENDATADK.INTRO.PROCEDURE3' | translate }}</p></li>
       <li><p>
-        4. {{ 'OPENDATADK.INTRO.PROCEDURE4' | translate }}
+        {{ 'OPENDATADK.INTRO.PROCEDURE4' | translate }}
         <a href="http://admin.opendata.dk/">{{ 'OPENDATADK.INTRO.PROCEDURE4_LINK' | translate }}</a>
       </p></li>
     </ol>
