Disabled most editing on mqtt subscriber

--- a/src/app/applications/iot-devices/iot-device-edit/mqtt-device-edit/mqtt-authentication-select/mqtt-authentication-select.component.html
+++ b/src/app/applications/iot-devices/iot-device-edit/mqtt-device-edit/mqtt-authentication-select/mqtt-authentication-select.component.html
@@ -30,6 +30,7 @@
       name="username"
       [placeholder]="'QUESTION.MQTT.USERNAME-PLACEHOLDER' | translate"
       required
+      [disabled]="editMode"
       [(ngModel)]="settings.mqttusername"
       [ngClass]="{
           'is-invalid': formFailedSubmit && errorFields.includes('mqttusername'),
